--- a/components/CodeRx/templates/base.html
+++ b/components/CodeRx/templates/base.html
@@ -12,8 +12,8 @@
 
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/_bootswatch.scss') }}"> -->
-<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/_variables.scss') }}"> -->
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/_bootswatch.scss') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/_variables.scss') }}">
 {% endblock %}
 
 {% block title %}
