--- a/components/CodeRx/templates/base.html
+++ b/components/CodeRx/templates/base.html
@@ -31,7 +31,7 @@ Welcome to CodeRx
         CodeRx
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03"
-        aria-expanded="true" aria-label="Toggle navigation">
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
