Changes for initial npm packages

--- a/components/CodeRx/templates/base.html
+++ b/components/CodeRx/templates/base.html
@@ -41,14 +41,14 @@ Welcome to CodeRx
                 <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="{{ url_for('editor') }}">Editor</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
-            </li>
+            </li> -->
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
