Created management script and initial login page

--- a/components/application/CodeRx/templates/login.html
+++ b/components/application/CodeRx/templates/login.html
@@ -2,7 +2,6 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Hello user</h1>
-    <h2>This page has been seen {{count}} times</h2>
-    
+    <h1>This will be a login page some day</h1>
+        
 {% endblock %}
