--- a/components/application/CodeRx/templates/security/login_user.html
+++ b/components/application/CodeRx/templates/security/login_user.html
@@ -20,9 +20,10 @@
         <div class="card-body justify-content-center">
           <div class="row justify-content-center">
               <div class="col col-md-12 justify-content-center text-center">
-                <form>
+                <form action="/login" method="POST" name="login_user_form">
                   <div class="input-group form-group ">
                       {{  wtf.form_errors(login_user_form, hiddens="only") }}
+                      {{ login_user_form.hidden_tag() }}
                   </div>
                   <div class="input-group form-group justify-content-center", style="font-size:20px">
                     {{ wtf.form_field(login_user_form.email,  class="form-control input-lg", placeholder="email", style="font-size:16px") }}
@@ -34,7 +35,7 @@
                     {{ wtf.form_field(login_user_form.remember,  class="form-control") }}
                   </div>
                   <div class="form-group">
-                    {{ wtf.form_field(login_user_form.submit, class="btn login_btn btn-block", style="font-size:20px", value="Login") }}
+                    {{ wtf.form_field(login_user_form.submit, class="btn login_btn btn-block", style="font-size:20px", value="Submit") }}
                   </div>
                 </form>
               </div>
