Added extra pages. Setup user account types

--- a/components/application/CodeRx/templates/admin_page.html
+++ b/components/application/CodeRx/templates/admin_page.html
@@ -2,6 +2,6 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>This will be a login page some day</h1>
-        
+<h1>Admin Management Page</h1>
+
 {% endblock %}
