--- a/components/application/CodeRx/templates/security/login_user.html
+++ b/components/application/CodeRx/templates/security/login_user.html
@@ -5,17 +5,11 @@
 {% block content %}
 {% include "security/_messages.html" %}
 <link rel="stylesheet" type="text/css" href="/static/css/login.css">
-
 <div class="container">
     <div class="d-flex justify-content-center h-100">
       <div class="card">
         <div class="card-header justify-content-center text-center">
           <h3>{{ _('Login') }}</h3>
-          <div class="d-flex justify-content-end social_icon">
-            <span><i class="fab fa-facebook-square"></i></span>
-            <span><i class="fab fa-google-plus-square"></i></span>
-            <span><i class="fab fa-twitter-square"></i></span>
-          </div>
         </div>
         <div class="card-body justify-content-center">
           <div class="row justify-content-center">
@@ -32,7 +26,8 @@
                     {{ wtf.form_field(login_user_form.password,  class="form-control", placeholder="password", style="font-size:16px") }}
                   </div>
                   <div class="input-group form-group justify-content-center", style="font-size:20px">
-                    {{ wtf.form_field(login_user_form.remember,  class="form-control") }}
+                    {{ wtf.form_field(login_user_form.remember,  class="form-control",
+                    title="REMEMBER ME", style="font-size:20px") }}
                   </div>
                   <div class="form-group">
                     {{ wtf.form_field(login_user_form.submit, class="btn login_btn btn-block", style="font-size:20px", value="Submit") }}
