--- a/components/application/CodeRx/templates/security/reset_password.html
+++ b/components/application/CodeRx/templates/security/reset_password.html
@@ -1,14 +1,85 @@
 {% extends "base_minimal.html" %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
+{% import "bootstrap/wtf.html" as wtf%}
+{% block content %}
+<link rel="stylesheet" type="text/css" href="/static/css/login.css">
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+      <div class="card">
+        <div class="card-header justify-content-center text-center">
+          <h3>{{ _('Reset Password') }}</h3>
+        </div>
+        <div class="card-body justify-content-center">
+          <div class="row justify-content-center">
+              <div class="col col-md-12 justify-content-center text-center">
+				<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
+
+			  	<div class="input-group form-group ">
+			  		{#
+			  		{{ reset_password_form.hidden_tag() }}
+			  		{{ render_field_with_errors(reset_password_form.password) }}
+			  		{{ render_field_with_errors(reset_password_form.password_confirm) }}
+			  		{{ render_field(reset_password_form.submit) }}
+			  		#}
+			  		<div class="input-group form-group justify-content-center", style="font-size:20px">
+			  			{{ reset_password_form.hidden_tag() }}
+			  		
+			  			{{  wtf.form_field(reset_password_form.password, hiddens="only") }}
+          				{{  wtf.form_field(reset_password_form.password_confirm, hiddens="only") }}
+          				
+          			</div>
+          			<div class="input-group form-group justify-content-center-group">
+          				{{  wtf.form_field(reset_password_form.submit, class="btn login_btn btn-block", style="font-size:20px") }}
+          			</div>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+{% endblock %}
+
+
+
+			{#
+
+
+
+{% extends "base_minimal.html" %}
+{% from "security/_macros.html" import render_field_with_errors, render_field %}
+{% import "bootstrap/wtf.html" as wtf%}
 
 {% block content %}
 {% include "security/_messages.html" %}
-<h1>{{ _('Reset password') }}</h1>
-<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
-  {{ reset_password_form.hidden_tag() }}
-  {{ render_field_with_errors(reset_password_form.password) }}
-  {{ render_field_with_errors(reset_password_form.password_confirm) }}
-  {{ render_field(reset_password_form.submit) }}
-</form>
-{% include "security/security_menu.html" %}
+<link rel="stylesheet" type="text/css" href="/static/css/login.css">
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+      <div class="card">
+        <div class="card-header justify-content-center text-center">
+          <h3>{{ _('Forgot Password') }}</h3>
+        </div>
+        <div class="card-body justify-content-center">
+          <div class="row justify-content-center">
+              <div class="col col-md-12 justify-content-center text-center">
+					<form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+						<div class="input-group form-group ">
+                      		{{  wtf.form_errors(forgot_password_form, hiddens="only") }}
+                      			{{ forgot_password_form.hidden_tag() }}
+                 		 </div>
+						<div class="input-group form-group justify-content-center", style="font-size:20px">
+                    		{{ wtf.form_field(forgot_password_form.email,  class="form-control input-lg", placeholder="email", style="font-size:16px") }}
+                  		</div>
+					  	<div class="form-group">
+                    		{{ wtf.form_field(forgot_password_form.submit, class="btn login_btn btn-block", style="font-size:20px", value="Send recovery email") }}
+                  		</div>
+                  		<div class="section-cta">
+								<a href="/login" class="btn btn-secondary btn-lg active btn-block" role="button" aria-pressed="true">Return to Login
+								</a>
+							</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
+#}
