--- a/components/application/CodeRx/templates/security/register_user.html
+++ b/components/application/CodeRx/templates/security/register_user.html
@@ -1,8 +1,9 @@
 {% extends "base_minimal.html" %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
-
-{% block content %}
 {% include "security/_messages.html" %}
+{% import "bootstrap/wtf.html" as wtf%}
+{% block content %}
+
 <link rel="stylesheet" type="text/css" href="/static/css/login.css">
 <div class="container">
     <div class="d-flex justify-content-center h-100">
@@ -13,76 +14,32 @@
         <div class="card-body justify-content-center">
           <div class="row justify-content-center">
               <div class="col col-md-12 justify-content-center text-center">
-					<form action="{{ url_for_security('register_user_form') }}" method="POST" name="register_user_form">
-						<div class="input-group form-group ">
-							{{  wtf.form_errors(register_user_form.email, hiddens="only") }}
-                      			{{ register_user_form.hidden_tag() }}
+					       <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
+						        <div class="input-group form-group ">
+        							{{  wtf.form_errors(register_user_form, hiddens="only") }}
+                			{{ register_user_form.hidden_tag() }}
                  		 </div>
-                 		 <div class="input-group form-group justify-content-center", style="font-size:20px">
-                    		{{ wtf.form_field(register_user_form.password,  class="form-control input-lg", placeholder="email", style="font-size:16px") }}
-                  		</div>
-                  		{% if register_user_form.password_confirm %}
-    					{{ render_field_with_errors(register_user_form.password_confirm) }}
-  						{% endif %}
-                  	</form>
+               		   <div class="input-group form-group justify-content-center", style="font-size:20px">
+                  		{{ wtf.form_field(register_user_form.email,  class="form-control input-lg ", id="inputlg", placeholder="email", style="font-size:16px") }}
+                		</div>
+                    <div class="input-group form-group justify-content-center", style="font-size:20px">
+                      {{ wtf.form_field(register_user_form.password,  class="form-control input-lg", id="inputlg", placeholder="password", style="font-size:16px") }}
+                    </div>
+                		{% if register_user_form.password_confirm %}
+                     {{ render_field_with_errors(register_user_form.password_confirm) }}
+        		        {% endif %}
+                    <div class="form-group", style="font-size:20px">
+                      {{ render_field(register_user_form.submit, class="btn login_btn btn-block", style="font-size:20px") }}
+                    </div>
+                    <div class="section-cta">
+                      <a href="/login" class="btn btn-secondary btn-lg active btn-block" role="button" aria-pressed="true">Return to Login
+                      </a>
+                    </div>
+                	</form>
                   </div>
               </div>
           </div>
       </div>
   </div>
-  </div>
-	{#
-
-  {{ register_user_form.hidden_tag() }}
-  {{ render_field_with_errors(register_user_form.email) }}
-  {{ render_field_with_errors(register_user_form.password) }}
-  {% if register_user_form.password_confirm %}
-    {{ render_field_with_errors(register_user_form.password_confirm) }}
-  {% endif %}
-  {{ render_field(register_user_form.submit) }}
-#}
-{% endblock %}
-
-
-{#
-	{% extends "base_minimal.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% import "bootstrap/wtf.html" as wtf%}
-
-{% block content %}
-{% include "security/_messages.html" %}
-<link rel="stylesheet" type="text/css" href="/static/css/login.css">
-<div class="container">
-    <div class="d-flex justify-content-center h-100">
-      <div class="card">
-        <div class="card-header justify-content-center text-center">
-          <h3>{{ _('Forgot Password') }}</h3>
-        </div>
-        <div class="card-body justify-content-center">
-          <div class="row justify-content-center">
-              <div class="col col-md-12 justify-content-center text-center">
-					<form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
-						<div class="input-group form-group ">
-                      		{{  wtf.form_errors(forgot_password_form, hiddens="only") }}
-                      			{{ forgot_password_form.hidden_tag() }}
-                 		 </div>
-						<div class="input-group form-group justify-content-center", style="font-size:20px">
-                    		{{ wtf.form_field(forgot_password_form.email,  class="form-control input-lg", placeholder="email", style="font-size:16px") }}
-                  		</div>
-					  	<div class="form-group">
-                    		{{ wtf.form_field(forgot_password_form.submit, class="btn login_btn btn-block", style="font-size:20px", value="Send recovery email") }}
-                  		</div>
-                  		<div class="section-cta">
-								<a href="/login" class="btn btn-secondary btn-lg active btn-block" role="button" aria-pressed="true">Return to Login
-								</a>
-							</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
 </div>
-
-{% include "security/security_menu.html" %}
 {% endblock %}
-#}
