Re styled editor page added fake data

--- a/components/application/CodeRx/templates/base.html
+++ b/components/application/CodeRx/templates/base.html
@@ -60,7 +60,7 @@ Welcome to CodeRx
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in messages %}
