--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -2,9 +2,66 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-<h1>Hello user</h1>
+<h1>Problem #1</h1>
 
-<div id="container" style="width:50vw;height:80vh;border:1px solid grey"></div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-8">
+            <div id="container" style="width:65vw;height:75vh;border:1px solid grey"></div>
+        </div>
+        <div class="col-lg-4">
+            <div class="row mb-3">
+                <div class="col-lg" style="font-size: 16pt; color: white;">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum."
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg">
+                    <table class="table table-dark table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Expected</th>
+                                <th scope="col">Run</th>
+                                <th scope="col">Result</th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>HelloWorld(1,2) -> True</td>
+                                <td>True</td>
+                                <td>OK</td>
+                                <td style="background-color: green;"></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>HelloWorld(2,2) -> True</td>
+                                <td>True</td>
+                                <td>OK</td>
+                                <td style="background-color: green;"></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>HelloWorld(2,1) -> True</td>
+                                <td>False</td>
+                                <td>X</td>
+                                <td style="background-color: red;"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="{{ url_for('static', filename='node_modules/monaco-editor/min/vs/loader.js')}}"></script>
 <script>
