fixed error with roles

--- a/components/application/CodeRx/templates/class_management.html
+++ b/components/application/CodeRx/templates/class_management.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-<h1>Student / professor homepage</h1>
+<h1>Class Management page</h1>
 
 
 {% endblock %}
