--- a/components/application/CodeRx/templates/profile.html
+++ b/components/application/CodeRx/templates/profile.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-<h1>Student / professor homepage</h1>
+<h1>Student / professor profile page</h1>
 
 {% endblock %}
 
