--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -2,6 +2,15 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    socket.on('connect', function() {
+        socket.emit('my event', {data: 'I\'m connected!'});
+        console.log("socketio connected");
+    });
+</script>
+
 <h1>Problem #1</h1>
 
 
@@ -113,7 +122,7 @@
     require(['vs/editor/editor.main'], function () {
         console.log("loading");
         editor = monaco.editor.create(document.getElementById("container"), {
-            value: 'public class HelloWorld { \n\n    public static void main(String[] args) { \n\t// Prints Hello, World to the terminal window.\n\t  System.out.println("Hello, World");\n    }\n\n}',
+            value: "import java.util.Scanner; \npublic class HelloWorld { \n\n    public static void main(String[] args) { \n\t// Prints Hello, World to the terminal window.\n        Scanner in = new Scanner(System.in); \n        String s = in.nextLine(); \n        System.out.println(s); \n    }\n\n}",
             language: "java",
             readOnly: false,
             theme: "vs-dark",
