--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -2,16 +2,20 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
-    socket.on('connect', function() {
-        socket.emit('my event', {data: 'I\'m connected!'});
-        console.log("socketio connected");
-    });
-</script>
 
 <h1>Problem #1</h1>
+<link rel="stylesheet" href="{{ url_for('static', filename='node_modules/xterm/dist/xterm.css')}}" /> 
+<script src="{{ url_for('static', filename='node_modules/xterm/dist/xterm.js')}}"></script>
+
+<style>
+    #terminal {
+      overflow: hidden;
+      width: 31vw;
+      height: 28vh; /* <- fixed height */
+      font-size: 16px;
+      line-height: 17px; /* <- initial line-height */
+    }
+</style>
 
 
 <div class="container-fluid">
@@ -19,6 +23,7 @@
         <div class="col-lg-8">
             <div id="container" style="width:65vw;height:75vh;border:1px solid grey"></div>
             <button type="button" id="generate" class="btn btn-primary btn-lg btn-block">Generate Output Line</button>
+            
         </div>
         <div class="col-lg-4">
             <div class="row mb-3">
@@ -66,12 +71,15 @@
                             </tr>
                         </tbody>
                     </table>
+                    <h3>Program output</h3>
+                    <div id="terminal"></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="{{ url_for('static', filename='node_modules/monaco-editor/min/vs/loader.js')}}"></script>
 <script>
@@ -122,18 +130,50 @@
     require(['vs/editor/editor.main'], function () {
         console.log("loading");
         editor = monaco.editor.create(document.getElementById("container"), {
-            value: "import java.util.Scanner; \npublic class HelloWorld { \n\n    public static void main(String[] args) { \n\t// Prints Hello, World to the terminal window.\n        Scanner in = new Scanner(System.in); \n        String s = in.nextLine(); \n        System.out.println(s); \n    }\n\n}",
+            value: "import java.util.Scanner; \npublic class HelloWorld { \n\n    public static void main(String[] args) { \n\t    Scanner in = new Scanner(System.in); \n        String s = in.nextLine(); \n        System.out.println(s); \n    }\n\n}",
             language: "java",
             readOnly: false,
             theme: "vs-dark",
             lineNumbers: "on"
         });
     });
+</script>
+
+
+
+<script type="text/javascript" charset="utf-8">
+    var term = new Terminal();
+    term.open(document.getElementById('terminal'));
+    //term.writeln('Hello from \x1B[1;3;31mxterm.js\x1B[0m')
+    
+    var socket;
+    $(document).ready(function(){
+        socket = io.connect('http://' + document.domain + ':' + location.port);
+        socket.on('connect', function() {
+            socket.emit('my event', {data: 'I\'m connected!'});
+            console.log("socketio connected");
+        });
+
+        socket.on('problem_result', function(data) {
+            console.log(data);
+            var i;
+            for (i = 0; i < data.length; i++) { 
+                term.writeln(data[i].stdout);
+            }
+            
+        });
+        
+    });
 
     $('#generate').on('click', function (e) {
 
-        console.log(cstr_encode(editor.getValue()));
+        console.log("Sending code to backend");
+        //socket.emit("new_problem_from_user", {data: cstr_encode(editor.getValue())})
+        socket.emit("new_problem_from_user", {data: editor.getValue()});
 
-    })
+    });
+
+    
 </script>
+
 {% endblock %}
