updated registration form to conform to new database schema

--- a/components/application/CodeRx/templates/security/register_user.html
+++ b/components/application/CodeRx/templates/security/register_user.html
@@ -19,9 +19,9 @@
         							{{  wtf.form_errors(register_user_form, hiddens="only") }}
                 			{{ register_user_form.hidden_tag() }}
                  		 </div>
-                     <div class="input-group form-group justify-content-center", style="font-size:20px">
+                     {# <div class="input-group form-group justify-content-center", style="font-size:20px">
                       {{ wtf.form_field(register_user_form.name,  class="form-control input-lg ", id="inputlg", placeholder="name", style="font-size:16px") }}
-                    </div>
+                    </div>  #}
                		   <div class="input-group form-group justify-content-center", style="font-size:20px">
                   		{{ wtf.form_field(register_user_form.email,  class="form-control input-lg ", id="inputlg", placeholder="email", style="font-size:16px") }}
                 		</div>
