--- a/components/application/CodeRx/templates/index.html
+++ b/components/application/CodeRx/templates/index.html
@@ -11,6 +11,13 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed">
+	{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-info" role="alert">{{ message }}</div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
     <div class="body-wrap boxed-container">
         <header class="site-header">
 			<div class="hero-disk hero-disk-1 is-moving-object is-translating" data-translating-factor="60">
