Manager updates. Manager will auto start a number of containers

--- a/components/application/CodeRx/templates/editor.html
+++ b/components/application/CodeRx/templates/editor.html
@@ -50,10 +50,10 @@
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>HelloWorld(1,2) -> True</td>
-                                <td>True</td>
-                                <td>OK</td>
-                                <td style="background-color: green;"></td>
+                                <td id="results_1_1">HelloWorld(1,2) -> True</td>
+                                <td id="results_1_2">True</td>
+                                <td id="results_1_3">OK</td>
+                                <td id="results_1_4" style="background-color: green;"></td>
                             </tr>
                             <tr>
                                 <th scope="row">1</th>
