Added logic to admin page. Loads and displays users / professors

--- a/components/application/CodeRx/templates/base.html
+++ b/components/application/CodeRx/templates/base.html
@@ -42,6 +42,14 @@ Welcome to CodeRx
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('editor') }}">Editor</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('join_class') }}">Join A Class</a>
+            </li>
+            {% if current_user.has_role("admin") %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('admin') }}">Admin</a>
+            </li>
+            {% endif %}
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
             </li>
