--- a/components/application/CodeRx/templates/homepage.html
+++ b/components/application/CodeRx/templates/homepage.html
@@ -5,33 +5,35 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
+
 <head>
-<style>
-	#profile{
-		font-family: Comic Sans MS;
-		text-align: center;
-    overflow:fixed;
-	}
-</style>
-<div class="d-flex justify-content-center h-100" id="profile">
-	<h1>Welcome, {{ email }}</h1>
-</div>
+  <style>
+    #profile {
+      font-family: Comic Sans MS;
+      text-align: center;
+      overflow: fixed;
+    }
+  </style>
+  <div class="d-flex justify-content-center h-100" id="profile">
+    <h1>Welcome, {{ email }}</h1>
+  </div>
 </head>
+
 <body>
-<div class="row justify-content-center" id="profile">
-<table width="90%" border="1">
-  <tr>
-  <td width="18%">Recent Submissions</td>
-  <td width="18%"><button onclick="displayCodeRxProblems()">CodeRx Problems</button> </td>
-  <td width="18%">(class name) Problems</td>
-  <td width="18%">Assigned</td>
-  <td width="18%"><button onclick="calendar()">Calendar</button></td>
-  </tr>
-  <tr>
-  <td>submissions table</td>
-  <td>
-  <div id="CodeRxProblems">
-            <table class="table table-dark table-bordered"> 
+  <div class="row justify-content-center" id="profile">
+    <table width="90%" border="1">
+      <tr>
+        <td width="18%">Recent Submissions</td>
+        <td width="18%"><button onclick="displayCodeRxProblems()">CodeRx Problems</button> </td>
+        <td width="18%">(class name) Problems</td>
+        <td width="18%">Assigned</td>
+        <td width="18%"><button onclick="calendar()">Calendar</button></td>
+      </tr>
+      <tr>
+        <td>submissions table</td>
+        <td>
+          <div id="CodeRxProblems">
+            <table class="table table-dark table-bordered">
               <thead>
                 <tr>
                   <th scope="col" width="10%">#</th>
@@ -62,61 +64,61 @@
                 </tr>
               </tbody>
             </table>
-        </div>
-	  </td>
-  <td>need raj to make this item in database</td>
-  <td>need raj to make this item in database</td>
-  <td>{{ problem_list }}</td>
-  </tr>
-</table>
-</div>
-<meta charset="utf-8" />
-<div id="calendar"></div>
-    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.css" rel="stylesheet" />
+          </div>
+        </td>
+        <td>need raj to make this item in database</td>
+        <td>need raj to make this item in database</td>
+        <td>{{ problem_list }}</td>
+      </tr>
+    </table>
+  </div>
+  <meta charset="utf-8" />
+  <div id="calendar"></div>
+  <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.print.css" rel="stylesheet" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/gcal.js"></script>
   -->
-<link href="/static/daygrid/main.min.css" rel="stylesheet" />
-<link href="/static/daygrid/daygrid.css" rel="stylesheet" />
+  <link href="/static/daygrid/main.min.css" rel="stylesheet" />
+  <link href="/static/daygrid/daygrid.css" rel="stylesheet" />
 
-<script src="/static/daygrid/main.min.js"></script>
-<script src="/static/daygrid/daygrid.js"></script>
+  <script src="/static/daygrid/main.min.js"></script>
+  <script src="/static/daygrid/daygrid.js"></script>
 
-<script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var calendarEl = document.getElementById('calendar');
 
-  document.addEventListener('DOMContentLoaded', function() {
-    var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        plugins: ['daygrid']
+      });
 
-    var calendar = new FullCalendar.Calendar(calendarEl, {
-      plugins: [ 'daygrid' ]
+      calendar.render();
     });
+  </script>
 
-    calendar.render();
-  });
-
-</script>
-
-<script>function calendar() {
-  var x = document.getElementById("calendar");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
+  <script>
+    function calendar() {
+      var x = document.getElementById("calendar");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
 
 
-<script>function displayCodeRxProblems() {
-  var x = document.getElementById("CodeRxProblems");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
+  <script>
+    function displayCodeRxProblems() {
+      var x = document.getElementById("CodeRxProblems");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
 </body>
 {% endblock %}
